src/objects/EmailMessage.object
<CustomObject>
    <fields>
        <fullName>SentimentNegative__c</fullName>
        <description>Used to store the negative sentiment result from Einstein.</description>
        <label>Sentiment Negative</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SentimentNeutral__c</fullName>
        <description>Used to store the Einstein result for neutral sentiment</description>
        <label>Sentiment Neutral</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SentimentPositive__c</fullName>
        <description>Used to store the Salesforce Einstein positive result</description>
        <label>Sentiment Positive</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
</CustomObject>